# bobbin-sdk

board-src/: Makefile  discovery-stm32f429i.rx
board/discovery-stm32f3/src/: lib.rs
board/discovery-stm32f429i/: Cargo.toml
board/discovery-stm32f429i/examples/: adc.rs  blinky.rs  btn.rs  clocks.rs  dac.rs  debug.rs  dispatch.rs  flash.rs  l3gd20.rs  leds.rs  memory.rs  minimal-blinky-gate.rs  minimal-blinky.rs  ms-tick-timeout.rs  ms-tick.rs  ownership.rs  pwm.rs  system.rs  tick.rs
board/discovery-stm32f429i/src/: lib.rs  main.rs  sys.rs
mcu-src/bobbin-stm32/stm32f42x/: lib.rx
mcu-src/bobbin-stm32/stm32f42x/periph/: pwr.rx  rcc.rx
mcu/bobbin-stm32/stm32-common/src/ext/: usart_f24.rs
mcu/bobbin-stm32/stm32f42x/: Cargo.toml
mcu/bobbin-stm32/stm32f42x/src/: adc.rs  c_adc.rs  can.rs  clock.rs  crc.rs  dac.rs  dma.rs  exti.rs  gpio.rs  i2c.rs  irq.rs  lib.rs  pwr.rs  rcc.rs  spi.rs  tim_adv.rs  tim_bas.rs  tim_gen.rs  usart.rs  wwdg.rs
mcu/bobbin-stm32/stm32f42x/src/ext/: clock.rs  mod.rs  rcc.rs
